<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/base_preferences" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="keepscreen"
            android:title="@string/keepscreen_preferences" />

        <EditTextPreference
            android:defaultValue="@string/share_text_default_preferences"
            android:key="share_text"
            android:title="@string/share_text_preferences" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/posts" >
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/posts_list"
            android:entryValues="@array/posts_list_values"
            android:key="posts_default_tab"
            android:title="@string/default_tab_preferences" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="posts_full_info"
            android:summary="@string/posts_full_info_summary_preferences"
            android:title="@string/posts_full_info_preferences" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="posts_zoom"
            android:summary="@string/posts_zoom_summary_preferences"
            android:title="@string/posts_zoom_preferences" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/qa" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/qa_list"
            android:entryValues="@array/qa_list_values"
            android:key="qa_default_tab"
            android:title="@string/default_tab_preferences" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/events" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/events_list"
            android:entryValues="@array/events_list_values"
            android:key="events_default_tab"
            android:title="@string/default_tab_preferences" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/additional_preferences" >
        <Preference android:title="@string/review_preferences" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/play_store_link" />
        </Preference>
        <Preference android:title="@string/source_code_preferences" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_link" />
        </Preference>
        <Preference android:title="@string/beta_test_preferences" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/google_plus_link" />
        </Preference>
        <Preference
            android:key="version"
            android:title="@string/version_preferences" />
    </PreferenceCategory>

</PreferenceScreen>