<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:id="@+id/event_location_divider"
            style="@style/HabReader.Theme.Light.Users.Divider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_event" />

        <TextView
            android:id="@+id/event_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/event_date_divider"
            style="@style/HabReader.Theme.Light.Users.Divider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_event" />

        <TextView
            android:id="@+id/event_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/event_pay_divider"
            style="@style/HabReader.Theme.Light.Users.Divider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay" />

        <TextView
            android:id="@+id/event_pay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/event_description_divider"
            style="@style/HabReader.Theme.Light.Users.Divider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/event_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>