<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            style="@style/HabReader.Theme.Light.Users.Divider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/base_info" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/karma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/user_karma" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/user_rating" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="96px"
                android:layout_height="96px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <TextView
            style="@style/HabReader.Theme.Light.Users.Divider"
            android:id="@+id/interests_divider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/interests" />

        <TextView
            android:id="@+id/interests"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/HabReader.Theme.Light.Users.Divider"
            android:id="@+id/summary_divider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>